--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 .jumbotron {
   padding-top: 6rem;
-  background-color: #fae9e9;
+  background-color: #afccf7;
 }
 
 #projects {
-  background: #fae9e9;
+  background: #afccf7;
 }
 
 section {
