--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 .jumbotron {
   padding-top: 6rem;
-  background-color: #afccf7;
+  background-color: #f7f0af;
 }
 
 #projects {
-  background: #afccf7;
+  background: #f7f0af;
 }
 
 section {
